Fixed a bug in the mobile menu where the buttons where out of place.

--- a/ASP/WebApplication1/WebApplication1/Content/CSS/style.css
+++ b/ASP/WebApplication1/WebApplication1/Content/CSS/style.css
@@ -27,7 +27,6 @@ nav
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	
 	position: fixed;	/* keep the menu bar at the top */
 	top: 0px;
 }
@@ -71,16 +70,6 @@ nav a:hover
 nav a:active
 {
 	background-color: #BE0000;
-}
-	
-#logobutton:hover
-{
-	background-color: #DC0000;
-}
-
-#logobutton:active
-{
-	background-color: #DC0000;
 }
 
 header
